--- a/src/app/components/about/about.component.css
+++ b/src/app/components/about/about.component.css
@@ -41,7 +41,7 @@ a.tip:hover span {
     background-color: transparent;
     border-bottom: 0;
 }
-.bio {
+.bio, div {
     font-family: 'Courier New', Courier, monospace;
 }
 .title-tag-container {
