added better tables, beginning next page

--- a/src/app/components/site-analytics/site-analytics.component.css
+++ b/src/app/components/site-analytics/site-analytics.component.css
@@ -1,5 +1,5 @@
 div {
-    color: whitesmoke;
+    color: turquoise;
     font-family: 'Courier New', Courier, monospace;
 }
 .mat-paginator, .mat-table {
@@ -14,7 +14,7 @@ div {
 }
 .header {
     font-size: 20px;
-    color: lightblue;
+    color: turquoise;
     width: 15% !important; /* this keep headers from moving */
 }
 .header-event, .header-views {
@@ -33,3 +33,26 @@ div {
 ::ng-deep .mat-progress-bar-buffer {
     background: #E4E8EB;
 }
+.stat-container {
+    margin-bottom: 3%;
+}
+.stat {
+    margin-left: 10%;
+}
+::ng-deep .mat-row, .mat-table, mat-paginator {
+    background: rgba(255,255,255,0);
+}
+::ng-deep .mat-table{
+    border: 1px solid turquoise;
+    box-shadow: turquoise;
+    box-shadow: 0 0 8px 0 turquoise, 0 6px 20px 0 turquoise;
+}
+::ng-deep .mat-paginator {
+    border-bottom: 1px solid turquoise;
+    border-right: 1px solid turquoise;
+    border-left: 1px solid turquoise;
+    box-shadow: 0 0 8px 0 turquoise, 0 6px 20px 0 turquoise;
+}
+/*::ng-deep .mat-paginator-icon {
+    color: turquoise;
+}*/
