--- a/src/app/components/site-analytics/site-analytics.component.html
+++ b/src/app/components/site-analytics/site-analytics.component.html
@@ -2,21 +2,18 @@
     <img src="../../../assets/analytics-images/analytics-logo.jpg" alt="googanalytics_logo.jpg" class="rounded mx-auto d-block" height="150px">
     <h2 class="display-4 text-center" style="padding-left: 5px; color:whitesmoke;">Analytics With Google</h2>
   </div>
-<!--<div class="row">
-    <div class="col col-lg-8 offset-lg-2 main-analytics-container" *ngIf="pageviews != undefined && isErrorPage === false">
-        <p>Pageviews in last 30 days: {{pageviews}}</p>
-        <p>Average Time Spent On Site Per Session: {{avgPageTime}} minutes</p>
-    </div>
-    <p *ngIf="isErrorPage">{{errorMessage}}</p>
-</div> -->
-<!--<div class="row">
-    <div class="col col-lg-8 offset-lg-2 main-analytics-container" *ngIf="feedbackCount != undefined && isErrorFeedback === false">
-        <p>Feedback Count: {{feedbackCount}}</p>
-    </div>
-    <p *ngIf="isErrorFeedback">{{errorMessageFeedback}}</p>
-</div>-->
+  <div class="stat-container">
+    <span class="stat" *ngIf="pageviews != undefined && isErrorPage === false; else pageErr">Pageviews in last 30 days: {{pageviews}}
+      <span class="stat">Average Time Spent On Site Per Session: {{avgPageTime}} minutes</span>
+    </span>
+    <ng-template #pageErr>{{errorMessage}}</ng-template>
+    <span class="stat" *ngIf="feedbackCount != undefined && isErrorFeedback === false; else feedErr">Number of feedback responses received: {{feedbackCount}}</span>
+    <ng-template #feedErr>{{errorMessageFeedback}}</ng-template>
+    <span class="next-icon-container" style="margin-left:1%;">
+      <img src="../../../assets/analytics-images/arrow_right_alt-24px.svg" alt="next.svg">
+    </span>
+  </div>
 <div class="row">
-    
     <div class="col col-lg-5 offset-lg-1">
         <div class="loading-bar" *ngIf="eventsLoading">
             <mat-progress-bar mode="indeterminate"></mat-progress-bar>
