--- a/src/app/components/site-analytics/site-analytics.component.html
+++ b/src/app/components/site-analytics/site-analytics.component.html
@@ -9,7 +9,7 @@
     <ng-template #pageErr>{{errorMessage}}</ng-template>
     <span class="stat" *ngIf="feedbackCount != undefined && isErrorFeedback === false; else feedErr">Number of feedback responses received: {{feedbackCount}}</span>
     <ng-template #feedErr>{{errorMessageFeedback}}</ng-template>
-    <span class="next-icon-container" style="margin-left:1%;">
+    <span class="next-icon-container" style="margin-left:1%;" (click)="logAnalytics(); navToSpeedAndNetwork();">
       <img src="../../../assets/analytics-images/arrow_right_alt-24px.svg" alt="next.svg">
     </span>
   </div>
