--- a/src/app/components/master-site-analytics/master-site-analytics.component.html
+++ b/src/app/components/master-site-analytics/master-site-analytics.component.html
@@ -1,1 +1,5 @@
-<p>master-site-analytics works!</p>
+<div class="jumbotron" style="background-color:transparent; box-shadow: none;">
+    <img src="../../../assets/analytics-images/analytics-logo.jpg" alt="googanalytics_logo.jpg" class="rounded mx-auto d-block" height="150px">
+    <h2 class="display-4 text-center" style="padding-left: 5px; color:whitesmoke;">Analytics With Google</h2>
+</div>
+<router-outlet></router-outlet>
