--- a/src/app/components/site-analytics/site-analytics.component.html
+++ b/src/app/components/site-analytics/site-analytics.component.html
@@ -1,7 +1,3 @@
-<div class="jumbotron" style="background-color:transparent; box-shadow: none;">
-    <img src="../../../assets/analytics-images/analytics-logo.jpg" alt="googanalytics_logo.jpg" class="rounded mx-auto d-block" height="150px">
-    <h2 class="display-4 text-center" style="padding-left: 5px; color:whitesmoke;">Analytics With Google</h2>
-  </div>
   <div class="stat-container">
     <span class="stat" *ngIf="pageviews != undefined && isErrorPage === false; else pageErr">Pageviews in last 30 days: {{pageviews}}
       <span class="stat">Average Time Spent On Site Per Session: {{avgPageTime}} minutes</span>
@@ -61,6 +57,10 @@
               <ng-container matColumnDef="views">
                 <th class="header header-views" mat-header-cell *matHeaderCellDef mat-sort-header="views"> Views </th>
                 <td mat-cell *matCellDef="let element"> {{element.views}} </td>
+              </ng-container>
+              <ng-container matColumnDef="avgTimeOnPage">
+                <th class="header header-views" mat-header-cell *matHeaderCellDef mat-sort-header="avgTimeOnPage"> Avg Time (min)</th>
+                <td mat-cell *matCellDef="let element"> {{element.avgTimeOnPage}} </td>
               </ng-container>
         
               <tr mat-header-row *matHeaderRowDef="displayedColumnsViews;"></tr>
