--- a/src/app/components/site-network-speed/site-network-speed.component.html
+++ b/src/app/components/site-network-speed/site-network-speed.component.html
@@ -1,1 +1,49 @@
-<p>site-network-speed works!vvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvv</p>
+<div class="info-container">
+  <span class="prev-icon-container" style="margin-left:5%;" (click)="logAnalytics(); navToSiteAnalytics();">
+    <img src="../../../assets/analytics-images/arrow_back-24px.svg" alt="back.svg">
+  </span>
+</div>
+<div class="row">
+    <div class="col col-lg-8 offset-lg-2">
+      <div class="loading-bar" *ngIf="loading">
+        <mat-progress-bar mode="indeterminate"></mat-progress-bar>
+      </div>
+        <div class="mat-elevation-z8">
+            <table mat-table matSort [dataSource]="dataSource">
+              <ng-container matColumnDef="continent">
+                <th class="header header-event" mat-header-cell *matHeaderCellDef mat-sort-header="continent"> Continent </th>
+                <td mat-cell *matCellDef="let element"> {{element.continent}} </td>
+              </ng-container>
+              <ng-container matColumnDef="country">
+                <th class="header header-event" mat-header-cell *matHeaderCellDef mat-sort-header="country"> Country </th>
+                <td mat-cell *matCellDef="let element"> {{element.country}} </td>
+              </ng-container>
+              <ng-container matColumnDef="city">
+                <th class="header header-action" mat-header-cell *matHeaderCellDef mat-sort-header="city"> City </th>
+                <td mat-cell *matCellDef="let element"> {{element.city}} </td>
+              </ng-container>
+              <ng-container matColumnDef="region">
+                <th class="header header-event" mat-header-cell *matHeaderCellDef mat-sort-header="region"> Region </th>
+                <td mat-cell *matCellDef="let element"> {{element.region}} </td>
+              </ng-container>
+              <ng-container matColumnDef="loadTime">
+                <th class="header header-event" mat-header-cell *matHeaderCellDef mat-sort-header="loadTime"> Load Time </th>
+                <td mat-cell *matCellDef="let element"> {{element.loadTime}} </td>
+              </ng-container>
+              <ng-container matColumnDef="redirectTime">
+                <th class="header header-action" mat-header-cell *matHeaderCellDef mat-sort-header="redirectTime"> Redirect Time </th>
+                <td mat-cell *matCellDef="let element"> {{element.redirectTime}} </td>
+              </ng-container>
+              <ng-container matColumnDef="serverResponseTime">
+                <th class="header header-action" mat-header-cell *matHeaderCellDef mat-sort-header="serverResponseTime"> Server Response Time </th>
+                <td mat-cell *matCellDef="let element"> {{element.serverResponseTime}} </td>
+              </ng-container>
+        
+              <tr mat-header-row *matHeaderRowDef="displayedColumns;"></tr>
+              <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [pageSizeOptions]="[5, 10]" showFirstLastButtons></mat-paginator>
+        </div>
+    </div>
+</div>
+<div *ngIf="errMessage !== undefined">{{errMessage}}</div>
