--- a/src/app/components/analytics-charts/analytics-charts.component.css
+++ b/src/app/components/analytics-charts/analytics-charts.component.css
@@ -6,3 +6,9 @@ div {
     width: 40%;
     margin-left: 30%;
 }
+.chart-7days, .chart-14days, .chart-30days {
+    font-size: 16pt;
+}
+.chart-7days, .chart-14days, .chart-30days:hover {
+    cursor: pointer;
+}
