adding another route and charts

--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -14,7 +14,7 @@
     <div class="col col-md-8 offset-md-2">
         <br>
         <p>
-            Sam is currently as Associate Software Engineer at Charles Schwab, Inc. He works on the Statusticians team
+            Sam is currently an Associate Software Engineer at Charles Schwab, Inc. He works on the Statusticians team
             supporting the Schwab Advisor Center (SAC) with Schwab Technology Services (STS). His work on the team covers the 
             full stack for maintaining the Status API (written in C#) and the Status UI (Angular) with a variety of different
             SQL and NoSQL databases.
@@ -28,13 +28,9 @@
             Outside of the digital world, Sam's interests include playing sports, cars, hiking, enjoying the outdoors, weightlifting,
             studying history, and learning about nutrition.
         </p>
-        <p>Growing up between California, the DC metro area, Tennessee, and most recently Florida, working in Austin, TX
-             at Charles Schwab gives another opportunity for him to experience this great nation and all it has to offer.
-        </p>
-        <p class="lets-go">CARPE DIEM!</p>
     </div>
 </div>
-<div class="row">
+<div class="row" style="margin-top: 2%;">
     <div class="col col-sm-1 offset-sm-3">
         <div class="card text-center" style="background-color: transparent; box-shadow: none;">
             <div class="card-header" style="box-shadow: none;">
