--- a/src/app/components/email-register/email-register.component.html
+++ b/src/app/components/email-register/email-register.component.html
@@ -39,8 +39,9 @@
         <small class="text-info">Please enter in (111)-111-1111 format</small>
     </div>
     <div class="form-group">
-        <label>Description (Not Required)</label>
+        <label>Description</label>
         <span class="description-invalid-message" *ngIf="description.invalid && description.touched">
+            <small class="text-danger" *ngIf="description.errors?.required">*Description is required</small>
             <small class="text-danger" *ngIf="description.errors?.maxlength">*Description must be under 100 characters</small>
         </span>
         <textarea [class.is-invalid]="description.invalid && description.touched" formControlName="description" name="tarea" cols="30" rows="10" class="form-control"></textarea>
