added map embed

--- a/src/app/components/site-network-speed/site-network-speed.component.css
+++ b/src/app/components/site-network-speed/site-network-speed.component.css
@@ -31,3 +31,6 @@ div {
     color: turquoise;
     width: 15% !important; /* this keep headers from moving */
 }
+.to-map:hover {
+    cursor: pointer;
+}
